# remit-demo

./: README.md
remit-elixir/: .gitignore  Dockerfile  README.md  mix.exs
remit-elixir/config/: config.exs  dev.exs  test.exs
remit-elixir/docker/: docker-compose.yml
remit-elixir/remit/: .gitignore  README.md  mix.exs
remit-elixir/remit/config/: dev.exs  (+3 more)
remit-go/: .gitignore  LICENSE  README.md  docker-compose.yml  go.mod  go.sum
remit-go/config/: app.yaml  provider.yaml  rate.yaml
remit-java/: README.md  build.gradle  docker-compose.yml  pom.xml
remit-node/: package-lock.json
remit-node/types/: index.ts
remit-python/: .gitignore  README.md  docker-compose.yml  requirements.txt
remit-python/app/: main.py
remit-python/config/: dev.json  settings.py
remit-python/docker/: api.Dockerfile
remit-python/tests/: test_remittance_service.py
remit-rust/: Cargo.toml  README.md  docker-compose.yml
remit-rust/config/: default.toml  development.toml  production.toml
remit-rust/remit-rust/: Cargo.toml
remit-rust/src/: config.rs  errors.rs  main.rs
remit-rust/src/api/: mod.rs  remittance.rs  webhooks.rs
remit-rust/src/integrations/: ad_bank.rs  mod.rs  upi.rs  user_service.rs  wise.rs
remit-rust/src/models/: exchange_rate.rs  mod.rs  transaction.rs
remit-rust/src/repositories/: exchange_rate.rs  mod.rs  transaction.rs
remit-rust/src/services/: mod.rs  remittance.rs
remit-typescript/: .env.example  README.md  package.json
remit-typescript/config/: index.ts
remit-typescript/docker/: docker-compose.yml
remit-typescript/docs/: openapi.json
(+134 files in other folders)
