[package]
name = "remit-rust"
version = "0.1.0"
edition = "2021"
description = "Near real-time cross-border remittance service between India and Canada"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
paperclip = { version = "0.8.0", features = ["actix-web", "swagger-ui"] }

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# AWS DynamoDB
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Configuration
config = "0.13.3"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.5"

# HTTP Client
reqwest = { version = "0.11.18", features = ["json"] }

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }
rust_decimal_macros = "1.30.0"
validator = { version = "0.16.0", features = ["derive"] }
itertools = "0.10.5"

# Password hashing
argon2 = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
mockall = "0.11.4"
wiremock = "0.5.19"
testcontainers = "0.14.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3 